--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 	<body ng-controller="pokedex">
 		<div class="container-fluid text-center">
 			
-			<div class="row">
-				<div class="col-md-12">
+			<div class="row ro2">
+				<div class="col-md-10">
 					<h1>Pokedex</h1>
+				</div>
+				<div class="col-m-2">
+					<p class="pod">Crea tu cuenta <a href="inicio.html">Aquí</a></p>
 				</div>
 			</div>
 
@@ -24,7 +27,7 @@
 				<div class="col-md-4" ng-repeat="poke in pokedexB">
 					<div class="cuadro">
 						<img src="{{poke.data.sprites.front_default}}">
-						<p>{{poke.data.name}}</p>
+						<p class="pe">{{poke.data.name}}</p>
 					</div>
 				</div>
 			</div>
