--- a/sesion.html
+++ b/sesion.html
@@ -8,10 +8,10 @@
     </head>
     <body>
         <div class="b1">
-            <h1>Descubramos nuevas aventuras!</h1>
+            <h1>Junto a nosotros!</h1>
         </div>
         <form action="" class="register">
-            <h2 class="titulo">Crea tu cuenta</h2>
+            <h2 class="titulo">Usuario</h2>
             <div class="container" class="conte">
                 <input type="text" name="name" placeholder="Usuario" class="i10" required>
                 <input type="password" name="clave" placeholder="Contraseña" class="i10" required>
